test: OrderServiceTest