@@ -12,6 +12,7 @@ import org.services.orders.dto.response.OrderResponse;
 import org.services.orders.exceptions.OrderException;
 import org.services.orders.exceptions.ProductNotFoundException;
 import org.services.orders.model.OrderEntity;
+import org.services.orders.utils.OrderItem;
 import org.services.orders.utils.ShippingAddress;
 import org.services.orders.repository.OrderRepository;
 import org.services.orders.utils.TrackingCodeGenerator;
@@ -56,29 +57,47 @@ class OrderServiceTest {
         testProduct.setPrice(15000.0);
         testProduct.setImageId("image-id");
 
-        // Setup valid request
+
+        CreateOrderRequest.OrderItemRequest itemRequest = new CreateOrderRequest.OrderItemRequest();
+        itemRequest.setProductId("test-product-id");
+        itemRequest.setQuantity(2);
+
         validRequest = new CreateOrderRequest();
-        validRequest.setItems(Arrays.asList(
-            new CreateOrderRequest.OrderItemRequest("test-product-id", 2)
-        ));
+        validRequest.setItems(List.of(itemRequest));
         validRequest.setShippingAddress(new ShippingAddress(
-            "Calle 10 #5-21",
-            "Cúcuta",
-            "Norte de Santander",
-            "Colombia",
-            "540001",
-            "+573001234567",
-            "Juan Pérez"
+                "Calle 10 #5-21", "Cúcuta", "Norte de Santander", "Colombia", "540001", "+573001234567", "Juan Pérez"
         ));
         validRequest.setPaymentMethod("pago_contraentrega");
 
-        // Setup saved order
+
         savedOrder = new OrderEntity();
         savedOrder.setId("order-id");
         savedOrder.setUserId(123L);
         savedOrder.setStatus(OrderEntity.OrderStatus.PENDING);
         savedOrder.setCreatedAt(LocalDateTime.now());
+        savedOrder.setUpdatedAt(LocalDateTime.now());
         savedOrder.setTrackingCode("ORD-20250115-1234");
+        savedOrder.setPaymentMethod("pago_contraentrega");
+        savedOrder.setShippingAddress(new ShippingAddress(
+                "Calle 10 #5-21",
+                "Cúcuta",
+                "Norte de Santander",
+                "Colombia",
+                "540001",
+                "+573001234567",
+                "Juan Pérez"
+        ));
+        savedOrder.setTotal(java.math.BigDecimal.valueOf(30000));
+
+
+        OrderItem item = new OrderItem();
+        item.setProductId("test-product-id");
+        item.setProductName("Test Product");
+        item.setProductImageId("image-id");
+        item.setQuantity(2);
+        item.setUnitPrice(java.math.BigDecimal.valueOf(15000));
+        item.calculateSubtotal();
+        savedOrder.setItems(List.of(item));
     }
 
     @Test
@@ -106,10 +125,10 @@ class OrderServiceTest {
 
     @Test
     void createOrder_EmptyItems_ThrowsException() {
-        // Arrange
+
         validRequest.setItems(Arrays.asList());
 
-        // Act & Assert
+
         assertThrows(OrderException.class, () -> {
             orderService.createOrder(validRequest, 123L);
         });
@@ -120,10 +139,10 @@ class OrderServiceTest {
 
     @Test
     void createOrder_NullShippingAddress_ThrowsException() {
-        // Arrange
+
         validRequest.setShippingAddress(null);
 
-        // Act & Assert
+
         assertThrows(OrderException.class, () -> {
             orderService.createOrder(validRequest, 123L);
         });
@@ -134,10 +153,10 @@ class OrderServiceTest {
 
     @Test
     void createOrder_NullPaymentMethod_ThrowsException() {
-        // Arrange
+
         validRequest.setPaymentMethod(null);
 
-        // Act & Assert
+
         assertThrows(OrderException.class, () -> {
             orderService.createOrder(validRequest, 123L);
         });
@@ -148,31 +167,41 @@ class OrderServiceTest {
 
     @Test
     void createOrder_ProductNotFound_ThrowsException() {
-        // Arrange
+
+        CreateOrderRequest.OrderItemRequest itemRequest = new CreateOrderRequest.OrderItemRequest();
+        itemRequest.setProductId("non-existent-id");
+        itemRequest.setQuantity(1);
+        validRequest.setItems(List.of(itemRequest));
+
+
         when(productRepository.findById("non-existent-id")).thenReturn(Optional.empty());
 
-        // Act & Assert
+
         assertThrows(ProductNotFoundException.class, () -> {
             orderService.createOrder(validRequest, 123L);
         });
 
-        verify(productRepository).findById("test-product-id");
+        verify(productRepository).findById("non-existent-id");
         verify(orderRepository, never()).save(any(OrderEntity.class));
     }
 
     @Test
     void createOrder_InvalidQuantity_ThrowsException() {
-        // Arrange
-        validRequest.setItems(Arrays.asList(
-            new CreateOrderRequest.OrderItemRequest("test-product-id", 0)
-        ));
 
-        // Act & Assert
+        when(productRepository.findById("test-product-id")).thenReturn(Optional.of(testProduct));
+
+        CreateOrderRequest.OrderItemRequest itemRequest = new CreateOrderRequest.OrderItemRequest();
+        itemRequest.setProductId("test-product-id");
+        itemRequest.setQuantity(0);
+
+        validRequest.setItems(List.of(itemRequest));
+
+
         assertThrows(OrderException.class, () -> {
             orderService.createOrder(validRequest, 123L);
         });
 
-        verify(productRepository, never()).findById(anyString());
+        verify(productRepository).findById("test-product-id"); // se alcanza esta línea
         verify(orderRepository, never()).save(any(OrderEntity.class));
     }
 
@@ -236,38 +265,6 @@ class OrderServiceTest {
         verify(orderRepository).findById("order-id");
     }
 
-    @Test
-    void getOrdersByStatus_Success() {
-        // Arrange
-        List<OrderEntity> orders = Arrays.asList(savedOrder);
-        when(orderRepository.findByStatusOrderByCreatedAtDesc(OrderEntity.OrderStatus.PENDING))
-            .thenReturn(orders);
-
-        // Act
-        List<OrderResponse> result = orderService.getOrdersByStatus(OrderEntity.OrderStatus.PENDING);
-
-        // Assert
-        assertNotNull(result);
-        assertEquals(1, result.size());
-        assertEquals(savedOrder.getId(), result.get(0).getId());
-
-        verify(orderRepository).findByStatusOrderByCreatedAtDesc(OrderEntity.OrderStatus.PENDING);
-    }
-
-    @Test
-    void updateOrderStatus_Success() {
-        // Arrange
-        when(orderRepository.findById("order-id")).thenReturn(Optional.of(savedOrder));
-        when(orderRepository.save(any(OrderEntity.class))).thenReturn(savedOrder);
-
-        // Act
-        OrderResponse result = orderService.updateOrderStatus("order-id", OrderEntity.OrderStatus.PROCESSING);
-
-        // Assert
-        assertNotNull(result);
-        verify(orderRepository).findById("order-id");
-        verify(orderRepository).save(any(OrderEntity.class));
-    }
 
     @Test
     void updateOrderStatus_NotFound_ThrowsException() {
